examples/bad/06-not_a_function.latf
int main() {
    int x = 0;
    x(); // error
    return 0;
}